# tic-tac-toe

./: CONTRIBUTING.md  DEVLOG.md  README.md  node.py  pyproject.toml  report.html
tests/: test_node.py  test_node_selection.py  test_optimality.py
tic_tac_toe/: Player.py  __init__.py  alpha_beta_pruning_tree.py  basic_game_tree.py  game_tree_explorer.py  montecarlo-tree-search.py  montecarlo_node.py  negamax_tree.py  node.py  node_selector.py  play.py  player.py  test_game_tree.py  winning_detector.py
tic_tac_toe/tree/: alpha_beta_pruning.py  alpha_beta_pruning_tree.py  alpha_beta_prunning.py  basic_game_tree.py  monte_carlo.py  negamax_tree.py
