[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = "Cyber Ninja's Group Project"
authors = ["Anthony <mrchowpoor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
